# MorletWaveModal

./: .gitignore  .travis.yml  LICENSE  MWModal Showcase.ipynb  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
mw_modal/: __init__.py  mw_modal.py
mwmodal/: __init__.py  mw_modal.py  tools.py
tests/: test_basic.py
